# control

./: .env  .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: publish-to-auto-release.yml
backends/python_server/: README.md  pyproject.toml
backends/python_server/python_server/: __init__.py
src/: App.css  App.tsx  main.tsx
src-tauri/: .env  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/commons/: initialize_helper.tsx
src/commons/navbar/: index.tsx  mac_controls.tsx  update_helper.tsx
src/commons/sidebar/: index.tsx
src/pages/chat/: display_text_block.tsx  index.tsx  user_input_area.tsx
src/pages/settings/: index.tsx
src/pages/xAI/models/: index.tsx
src/stores/: store_helper.ts
src/stores/jotai/: chat_selected_model.ts  chats.ts  x_api_key.ts  x_models.ts
src/stores/sqlite/: index.ts
src/stores/stronghold/: index.ts
